socket.io local file

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </center>
     </div>
     <script src='final-engine-debug.js'></script>
-    <script src="http://83.212.99.94:85/socket.io/socket.io.js"></script>
+    <script src="socket.io.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </body>
