--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="msgbox" style="display: none;">
+    <div id="msgbox" style="display: none;" onclick="start();">
         <center>
             <h1>Loading...</h1>
         </center>
